@@ -6,6 +6,7 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- #2333: Post process properties in type info Generic Setup import (for bulk)
 - Updated test for changes in CPSUtil
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
